style.css
/* CLOUD ANIMATION */

.cloud {
  background: #d8e9f6;
  border-radius: 100px;
  height: 120px;
  margin: 240px auto 20px;
  position: relative;
  width: 350px;
  z-index: 3;
}

.raine-name {
  margin: 100px auto 20px;
  position: relative;
  height: 120px;
  text-transform: uppercase;
  letter-spacing: 0.3em;
}

.cloud:after, .cloud:before {
  background: #d8e9f6;
  content: '';
  position: absolute;
  z-index: -1;
}
.cloud:after {
  border-radius: 100px;
  height: 100px;
  left: 50px;
  top: -50px;
  width: 100px;
}
.cloud:before {
  height: 180px;
  border-radius: 200px;
  right: 50px;
  top: -90px;
  width: 180px;
}

.cloud_eye {
  background: #fff;
  border-radius: 100%;
  bottom: 90px;
  display: block;
  height: 40px;
  position: absolute;
  width: 30px;
}
.cloud_eye:before {
  background: #000;
  bottom: 8px;
  border-radius: 100%;
  content: '';
  height: 15px;
  right: 9px;
  opacity: .4;
  position: absolute;
  width: 10px;
}

.cloud_eye--right {
  right: 100px;
}
.cloud_eye--left {
  right: 150px;
}

.cloud_cheek {
  background: red;
  border-radius: 100%;
  bottom: 60px;
  display: block;
  height: 30px;
  opacity: .25;
  position: absolute;
  width: 30px;
}
.cloud_cheek--right {
  right: 70px;
}
.cloud_cheek--left {
  right: 180px;
}

.cloud_drop:after, .cloud_drop:before {
  background: #e2eef7;
  border-radius: 100%;
  bottom: -10px;
  content: '';
  display: block;
  height: 20px;
  position: absolute;
  transform: scale(0.7, 1);
  width: 10px;
}
.cloud_drop--left:before {
  animation: rain 1s infinite;
  left: 100px;
}
.cloud_drop--left:after {
  animation: rain 1100ms infinite;
  animation-delay: 100ms;
  left: 150px;
}
.cloud_drop--right:before {
  animation: rain 900ms infinite;
  right: 100px;
}
.cloud_drop--right:after {
  animation: rain 1300ms infinite;
  animation-delay: 120ms;
  right: 150px;
}

form {
  margin-top: 200px;
  margin-left: 20%;
  margin-right: 20%;
}

@keyframes rain {
  0% {
    bottom: -10px;
    opacity: 1;
  }
  100% {
    bottom: -290px;
    opacity: 0;
  }
}

.content-center {
  height: 100vh;
  width: 100vw;
}

/* MEDIA QUERIES */
@media only screen and (max-width: 700px) {
  .raine-name {
    font-size: 40px;
    letter-spacing: 0.1em;
    margin: 40px auto 20px;  
  }
}

@media only screen and (max-width: 380px) {
  .raine-name {
    font-size: 30px;
    letter-spacing: 0.1em;
    margin: 40px auto 20px;  
  }
  .cloud {
    height: 90px;
    width: 290px;
  }
}


@media only screen and (min-width: 581px) and (max-height: 1100px) {
  .raine-name {
    font-size: 80px;
    letter-spacing: 0.1em;
    margin: 40px auto 20px;  
  }
  .cloud {
    margin: 300px auto 20px;
  }
}

@media only screen and (min-width: 1000px) and (min-height: 1000px) {
  .raine-name {
    font-size: 80px;
    letter-spacing: 0.1em;
    margin: 40px auto 20px;  
  }
  .cloud {
    margin: 500px auto 20px;
  }
}

@media only screen and (min-width: 200px) and (min-height: 2000px) {
  .raine-name {
    font-size: 80px;
    letter-spacing: 0.1em;
    margin: 40px auto 20px;  
  }
  .cloud {
    margin: 500px auto 20px;
  }
}

